--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "chart.js": "^4.4.7",
     "cra-template-typescript": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@eslint/js": "^8.57.1",
     "@mui/material": "^6.2.0",
+    "@types/chart.js": "^2.9.41",
     "@types/react-router-dom": "^5.3.3",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
