--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "wheather-task",
   "version": "0.1.0",
+  "homepage": "https://MaryMisMaria.github.io/wheather-task",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -14,9 +15,12 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "react-select": "^5.9.0"
+    "react-select": "^5.9.0",
+    "recharts": "^2.15.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -51,6 +55,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
+    "gh-pages": "^6.2.0",
     "globals": "^15.13.0",
     "prettier": "^3.4.2",
     "typescript-eslint": "^7.2.0"
