add-feature-endoint

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wheather-task",
   "version": "0.1.0",
-  "homepage": "https://MaryMisMaria.github.io/wheather-task",
   "private": true,
+  "homepage": "https://MaryMisMaria.github.io/wheather-task.git",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
