--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wheather-task",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MaryMisMaria.github.io/wheather-task.git",
+  "homepage": "https://MaryMisMaria.github.io/wheather-task",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -19,11 +19,11 @@
     "recharts": "^2.15.0"
   },
   "scripts": {
-    "test": "react-scripts test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
@@ -49,21 +49,16 @@
   "devDependencies": {
     "@eslint/js": "^8.57.1",
     "@mui/material": "^6.2.0",
-    "@testing-library/react": "^16.1.0",
     "@types/chart.js": "^2.9.41",
-    "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-select": "^5.0.1",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "gh-pages": "^6.2.0",
     "globals": "^15.13.0",
-    "msw": "^2.7.0",
     "prettier": "^3.4.2",
-    "typescript": "^4.9.5",
     "typescript-eslint": "^7.2.0"
   }
 }
