--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wheather-task",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MaryMisMaria.github.io/wheather-task.git",
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -47,12 +47,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@eslint/js": "^8.57.1",
     "@mui/material": "^6.2.0",
     "@types/chart.js": "^2.9.41",
     "@types/react-router-dom": "^5.3.3",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "gh-pages": "^6.2.0",
