--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@types/lodash": "^4.17.13",
     "chart.js": "^4.4.7",
     "cra-template-typescript": "1.2.0",
     "react": "^19.0.0",
